--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -2,7 +2,13 @@
   margin: 3rem auto;
   width: 90%;
   max-width: 40rem;
-  min-height: 76vh;
+  flex: 1;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .main {
