--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -7,14 +7,15 @@
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden;
+  justify-content: space-between;
+  height: 100vh;
+  /* overflow: hidden; */
 }
 @media screen and (max-width: 768px) {
   .main {
     margin: 2rem auto;
     width: 95%;
-    min-height: 80vh;
+    /* min-height: 80vh; */
   }
   
 }
