--- a/src/components/meetups/MeetupItem.module.css
+++ b/src/components/meetups/MeetupItem.module.css
@@ -1,5 +1,6 @@
 .item {
   margin: 1rem 0;
+  color: #25201FE7;
 }
 
 .image {
@@ -23,27 +24,29 @@
 
 .content h3 {
   font-size: 1.25rem;
-  color: #2c292b;
 }
 
 .actions {
   padding: 1.5rem;
   text-align: center;
+
 }
 
 .actions button {
   font: inherit;
   cursor: pointer;
-  color: #77002e;
-  border: 1px solid #77002e;
+  color: #ECA6AFFF;
+  border: 1px solid #ECA6AFFF;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
+  transition: all .17s ease-in ;
 }
 
 .actions button:hover,
 .actions button:active {
   background-color: #ffe2ed;
+ 
 }
 
 @media screen and (max-width: 768px) {
