--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -5,10 +5,11 @@
   flex: 1;
 }
 .container {
+  position: relative;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
 }
 @media screen and (max-width: 768px) {
   .main {
