--- a/src/components/layout/MainFooter.module.css
+++ b/src/components/layout/MainFooter.module.css
@@ -6,6 +6,7 @@
   margin: 0 auto;
   text-align: center;
   background-color: transparent;
+  animation: fadeInAnimation 2.2s ease-in-out forwards;
 }
 
 .text {
@@ -56,5 +57,13 @@
   .text::before {
     bottom: 4vw;
     width: 50%;
+  }
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
